--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on:
     branches: [main, develop]
     paths:
       - 'web-app/src/**'
+      - 'web-app/src/__tests__/**'
       - 'web-app/package.json'
       - 'web-app/jest.config.cjs'
       - '.github/workflows/test.yml'
@@ -12,6 +13,7 @@ on:
     branches: [main, develop]
     paths:
       - 'web-app/src/**'
+      - 'web-app/src/__tests__/**'
       - 'web-app/package.json'
       - 'web-app/jest.config.cjs'
 
