--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,73 +58,14 @@ jobs:
           NODE_OPTIONS: --max-old-space-size=4096
           NODE_ENV: test
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          file: ./web-app/coverage/coverage-final.json
-          flags: jest
-          name: codecov-umbrella
-          fail_ci_if_error: false
-          verbose: true
-
-      - name: Comment coverage on PR
-        if: github.event_name == 'pull_request'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const fs = require('fs');
-            const coverageFile = './web-app/coverage/coverage-summary.json';
-            
-            if (fs.existsSync(coverageFile)) {
-              const coverage = JSON.parse(fs.readFileSync(coverageFile, 'utf-8'));
-              const total = coverage.total;
-              
-              const comment = `
-              ## Test Coverage Report
-              
-              | Metric | Coverage |
-              |--------|----------|
-              | Lines | ${total.lines.pct.toFixed(2)}% |
-              | Statements | ${total.statements.pct.toFixed(2)}% |
-              | Functions | ${total.functions.pct.toFixed(2)}% |
-              | Branches | ${total.branches.pct.toFixed(2)}% |
-              
-              ✅ All tests passing (${new Date().toLocaleString()})
-              `;
-              
-              github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: comment,
-              });
-            }
-
-      - name: Check coverage thresholds
-        working-directory: web-app
-        run: |
-          echo "Coverage thresholds enforced:"
-          echo "- Global: 2% minimum"
-          echo "- src/utils: 100%"
-          echo "✅ Checks completed"
-
-      - name: Archive test results
+      - name: Archive coverage
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: test-results-node-${{ matrix.node-version }}
-          path: |
-            web-app/coverage/
-            web-app/jest-results.xml
-          retention-days: 30
-
-      - name: Archive coverage report
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage-report
-          path: web-app/coverage/lcov-report/
+          name: coverage-${{ matrix.node-version }}
+          path: web-app/coverage/
           retention-days: 7
+        continue-on-error: true
 
   lint:
     name: Lint Code
@@ -238,37 +179,17 @@ jobs:
       - name: Check test results
         run: |
           echo "## GitHub Actions Summary"
-          echo "✅ Test Results: ${{ needs.test.result }}"
-          echo "✅ Lint Results: ${{ needs.lint.result }}"
-          echo "✅ Security Audit: ${{ needs.security.result }}"
-          echo "✅ Build Status: ${{ needs.build.result }}"
+          echo "Test: ${{ needs.test.result }}"
+          echo "Lint: ${{ needs.lint.result }}"
+          echo "Security: ${{ needs.security.result }}"
+          echo "Build: ${{ needs.build.result }}"
           
           if [[ "${{ needs.test.result }}" == "failure" ]]; then
-            echo "❌ Tests failed - review test report"
+            echo "❌ Tests failed"
             exit 1
           fi
           
-          echo "✅ All primary checks passed"
-
-      - name: Create status check
-        if: github.event_name == 'pull_request'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const passed = '${{ needs.test.result }}' === 'success';
-            const status = passed ? 'success' : 'failure';
-            const description = passed 
-              ? 'All tests passed and coverage thresholds met'
-              : 'Tests failed - review before merging';
-            
-            github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context.sha,
-              state: status,
-              description: description,
-              context: 'Test Suite',
-            });
+          echo "✅ All checks passed"
 
 ---
 
