--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          cache-dependency-path: 'web-app/package-lock.json'
+          cache-dependency-path: web-app/package-lock.json
       
       - run: cd web-app && npm ci
       
