--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       
-      - run: cd web-app && npm ci
+      - run: cd web-app && npm install
       
       - run: cd web-app && npm test -- --maxWorkers=2
         env:
