fix: Use working-directory instead of cd in workflow
GitHub Actions should use working-directory: web-app
instead of cd web-app && command syntax.

This properly sets the working directory for each step.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,9 +25,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       
-      - run: cd web-app && npm install
+      - run: npm install
+        working-directory: web-app
       
-      - run: cd web-app && npm test -- --maxWorkers=2
+      - run: npm test -- --maxWorkers=2
+        working-directory: web-app
         env:
           CI: true
           NODE_ENV: test
