--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: web-app
     
     strategy:
       matrix:
@@ -26,10 +29,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       
       - run: npm install
-        working-directory: web-app
       
       - run: npm test -- --maxWorkers=2
-        working-directory: web-app
         env:
           CI: true
           NODE_ENV: test
