--- a/web-app/package.json
+++ b/web-app/package.json
@@ -82,7 +82,9 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.0",
     "@eslint/js": "^9.19.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
@@ -93,6 +95,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
