--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,26 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # Firebase and Cloud
+  firebase_core: ^2.24.0
+  cloud_firestore: ^4.13.0
+  firebase_auth: ^4.10.0
+  
+  # Stripe Payment Integration
+  flutter_stripe: ^10.0.0
+  
+  # QR Code Generation
+  qr_flutter: ^4.1.0
+  
+  # HTTP Requests
+  http: ^1.1.0
+  
+  # Date/Currency Formatting
+  intl: ^0.19.0
+  
+  # State Management (optional but recommended)
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
