security: Remove API secrets from .env file
- Removed actual Stripe and SendGrid API keys from .env
- These should be configured in Vercel environment variables only
- .env now contains only placeholders and configuration structure
- Allows push to GitHub without secret scanning violations

--- a/.env
+++ b/.env
@@ -1,21 +1,22 @@
 # Stripe Configuration
-# Get these from https://dashboard.stripe.com/apikeys (Use TEST keys)
-# Publishable Key starts with pk_test_
-# Secret Key starts with sk_test_
-STRIPE_SECRET_KEY=sk_test_zJB78wrgU32GM9kbaVTPAS1y
+# Get these from https://dashboard.stripe.com/apikeys
+# Publishable Key starts with pk_test_ or pk_live_
+# Secret Key starts with sk_test_ or sk_live_
+# Set STRIPE_SECRET_KEY in Vercel environment variables
+STRIPE_SECRET_KEY=
 
 # Firebase Configuration
 # Urban Garage Sale Firebase project settings
 FIREBASE_PROJECT_ID=urbangaragesale
 
 # Firebase Service Account
-# Path to Firebase Admin SDK private key
+# Path to Firebase Admin SDK private key (set in Vercel env)
 GOOGLE_APPLICATION_CREDENTIALS=./PrivateKey/urbangaragesale-firebase-adminsdk-fbsvc-d4c97a0c2f.json
 
 # SendGrid Configuration
 # Get API key from SendGrid dashboard: https://app.sendgrid.com/settings/api_keys
-SENDGRID_API_KEY=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
-
+# Set SENDGRID_API_KEY in Vercel environment variables
+SENDGRID_API_KEY=
 # Server Configuration
 PORT=3000
 NODE_ENV=development
