--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,19 @@
 {
-  "buildCommand": "echo 'Vercel auto-deploying API routes'",
-  "outputDirectory": ".",
+  "buildCommand": "npm run build || echo 'No build step needed'",
+  "outputDirectory": "public",
   "functions": {
     "api/*.js": {
       "runtime": "nodejs18.x"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
